# stable-diffusion-task

./: .gitignore  pyproject.toml  requirements_cuda.txt  requirements_macos.txt
examples/: sdxl_turbo.py  sdxl_turbo_lora_hf.py
sd_task/: __init__.py  download_model.py
sd_task/task_runner/inference_task/: inference_task.py  prompt.py
